added maxim observability - tool call trace - event trace

--- a/experiments/e_2.ipynb
+++ b/experiments/e_2.ipynb
@@ -640,8 +640,8 @@
     "# Markdown Generator Agent\n",
     "markdown_generator_agent = Agent(\n",
     "    role=\"Markdown Generator\",\n",
-    "    goal=\"Generate well-structured markdown content with proper formatting and saves the file in the folder location provided by the user - {folder_path}\",\n",
-    "    backstory=\"Expert in creating technical markdown content with proper structure and formatting.\",\n",
+    "    goal=\"Generate well-structured MDX content with proper formatting and saves the file in the folder location provided by the user - {folder_path}\",\n",
+    "    backstory=\"Expert in creating technical MDX content with proper structure and formatting.\",\n",
     "    memory=True,\n",
     "    verbose=True,\n",
     "    llm=llm,\n",
@@ -817,17 +817,17 @@
     "# Markdown Generation Task\n",
     "markdown_generation_task = Task(\n",
     "    description=\"\"\"\n",
-    "        Generate a well-structured markdown file for the blog post that includes:\n",
+    "        Generate a well-structured mdx file for the blog post that includes:\n",
     "        1. Clear headings and subheadings\n",
     "        2. Proper code block formatting\n",
     "        3. Mermaid diagram syntax\n",
     "        4. Tables and lists where appropriate\n",
     "        5. Links and references\n",
     "        \n",
-    "        Save the generated markdown file using the file_saver_tool.\n",
+    "        Save the generated mdx file using the file_saver_tool.\n",
     "    \"\"\",\n",
     "    expected_output=\"\"\"\n",
-    "        A properly formatted markdown file with all content structured correctly, saved to the specified location.\n",
+    "        A properly formatted mdx file with all content structured correctly, saved to the specified location.\n",
     "    \"\"\",\n",
     "    agent=markdown_generator_agent\n",
     ")"
